# memfabric

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  BACKLOG.md  CLAUDE.md  Caddyfile  Dockerfile  KNOWLEDGE_LAYER.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg
.claude/: settings.json
cyber_knowledge/: README.md  __init__.py  bridge.py  mcp_tools.py  repo.py  routes.py  schemas.py
docs/: CHANGELOG.md  companion-integration.md  project brief.md  wp-032-validation-evidence.md
hooks/: _filters.py  post_tool_use.py  session_start.py  stop.py
mcp_server/: _coercion.py  config.py  server.py
memory_client/: COMPANION.md  WIRING.md  cli.py  client.py  config.py  formatting.py  requirements.txt
memory_service/: auth.py  config.py  cybersec_schemas.py  embeddings.py  ingest_guard.py  knowledge_repo.py  knowledge_routes.py  knowledge_schemas.py  logging.ini  main.py  mcp_auth.py  memory_repo.py  requirements.txt  scheduler.py
notebooks/: ingest_pipeline_inspector.ipynb
scripts/: README.md  __init__.py  analyse_cross_framework_clusters.py  apply_threat_dedup_wp138b.py  build_inspector_notebook.py  calibrate_threat_ba_influence.py  calibrate_threat_dedup.py  chunkers.py  cleanup_bare_strands.py  cobit2019_inspection.yaml  create_cross_framework_informs.py  create_iso22301_nist_rc_crosswalk.py  create_new_framework_informs.py  dedup_cleanup.py  din14027_inspection.yaml  dump_db.py  extract_cti_threats.py  ingest_all_threat_reports.py  ingest_attack.py  ingest_attack_mitigations.py  ingest_document.py  ingest_framework.py  ingest_sp800_53.py  ingest_sp800_53_attack_mappings.py  (+45 more)
(+234 files in other folders)
